--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - trainer: default
-model: EleutherAI/gpt-neo-125m
+model: togethercomputer/RedPajama-INCITE-7B-Base
 log_dir: "Funtuner-logs"
 log_wandb: true
 run_name: ""
@@ -17,9 +17,9 @@ datasets:
         split: ["train","test"]
 
 validation_size: 0.1
-deepspeed: false
+deepspeed: true
 deepspeed_config: "./funtuner/config/zero2.json"
-LoRa: false 
+LoRa: true 
 LoraConfig:
   r: 8
   target_modules: ["q_proj", "v_proj"]
