--- a/funtuner/config/trainer/default.yaml
+++ b/funtuner/config/trainer/default.yaml
@@ -15,7 +15,7 @@ num_train_epochs: 3
 logging_steps: 10
 max_grad_norm: 1.0
 save_total_limit: 4
-fp16: false
+fp16: true
 lr_scheduler_type: cosine
 warmup_ratio: 0.15
 evaluation_strategy: steps
