--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -18,7 +18,7 @@ datasets:
 
 validation_size: 0.1
 deepspeed: true
-deepspeed_config: "./funtuner/config/zero3.json"
+deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
@@ -26,5 +26,5 @@ LoraConfig:
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
-eight_bit_training: false
+eight_bit_training: true
 template: alpaca-lora
