--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -26,5 +26,5 @@ LoraConfig:
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
-eight_bit_training: true
+eight_bit_training: false
 template: alpaca-lora
