--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -18,7 +18,7 @@ datasets:
 
 validation_size: 0.1
 deepspeed: true
-deepspeed_config: "./funtuner/config/zero3.json"
+deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
@@ -27,5 +27,6 @@ LoraConfig:
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
+  inference_mode: false
 eight_bit_training: false
 template: alpaca-lora
