--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,11 +1,11 @@
 defaults:
   - trainer: default
-model: EleutherAI/gpt-neo-125m
+model: togethercomputer/RedPajama-INCITE-7B-Base
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
 wandb_entity: "shahules786"
-max_length: 512
+max_length: 1024
 per_digit_tokens: False
 special_tokens:
   eos_token: "</s>"
@@ -22,7 +22,7 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["q_proj","v_proj","k_proj"]
+  target_modules: ["query_key_value"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
