--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -13,8 +13,8 @@ special_tokens:
   pad_token: "<pad>"
 datasets:
 
-  - databricks/databricks-dolly-15k:
-        split: ["train"]
+  - Dahoas/cot_gsm8k:
+        split: ["train","val"]
 
 validation_size: 0.1
 deepspeed: true
@@ -22,11 +22,11 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["q_proj","k_proj"]
+  target_modules: ["query_key_value"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
   inference_mode: false
 eight_bit_training: false
-template: alpaca-lora
+template: orca-style
