--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - trainer: default
-model: togethercomputer/RedPajama-INCITE-Base-3B-v1
+model: EleutherAI/gpt-neo-125m
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
@@ -22,11 +22,12 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["query_key_value"]
+  target_modules: ["q_proj","k_proj","v_proj"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
   inference_mode: false
+  modules_to_save: ["wte", "lm_head"]
 eight_bit_training: false
 template: orca-style
