--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - trainer: default
-model: EleutherAI/gpt-neo-125m
+model: togethercomputer/RedPajama-INCITE-Base-3B-v1
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
@@ -22,7 +22,7 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["q_proj","k_proj","v_proj"]
+  target_modules: ["query_key_value"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
