--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - trainer: default
-model: togethercomputer/RedPajama-INCITE-7B-Base
+model: openlm-research/open_llama_3b
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
@@ -22,7 +22,7 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["query_key_value"]
+  target_modules: ["q_proj","k_proj","v_proj","o_proj"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
