--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -15,6 +15,8 @@ datasets:
 
   - Dahoas/cot_gsm8k:
         split: ["train","val"]
+  - psmathur/WizardLM_Orca:
+        split: ["train"]
 
 validation_size: 0.1
 deepspeed: true
