--- a/comparer/package.json
+++ b/comparer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Battle of LLMs",
   "version": "0.1.0",
-  "homepage": "https://open-assistant.github.io/FunTuner/",
+  "homepage": "https://explodinggradients.github.io/Funtuner/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
