--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,11 +1,11 @@
 defaults:
   - trainer: default
-model: togethercomputer/RedPajama-INCITE-7B-Base
+model: openlm-research/open_llama_7b
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
 wandb_entity: "shahules786"
-max_length: 512
+max_length: 2048
 per_digit_tokens: False
 special_tokens:
   eos_token: "</s>"
@@ -13,20 +13,23 @@ special_tokens:
   pad_token: "<pad>"
 datasets:
 
-  - databricks/databricks-dolly-15k:
+  - Dahoas/cot_gsm8k:
+        split: ["train","val"]
+  - psmathur/WizardLM_Orca:
         split: ["train"]
 
-validation_size: 0.1
+validation_size: 0.02
 deepspeed: true
 deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["query_key_value"]
+  target_modules: ["q_proj","k_proj","v_proj","o_proj"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
   inference_mode: false
+  modules_to_save: ["wte", "lm_head"]
 eight_bit_training: false
-template: alpaca-lora
+template: orca-style
