--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -20,11 +20,11 @@ datasets:
 
 validation_size: 0.02
 deepspeed: true
-deepspeed_config: "./funtuner/config/zero3.json"
+deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["q_proj","k_proj","v_proj","o_proj"]
+  target_modules: ["query_key_value"]
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
