--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - trainer: default
-model: togethercomputer/RedPajama-INCITE-7B-Base
+model: EleutherAI/gpt-neo-125m
 log_dir: "/scratch/c.scmse/Funtuner-logs"
 log_wandb: true
 run_name: ""
@@ -22,11 +22,16 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["query_key_value"]
+  target_modules: all
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
   inference_mode: false
-eight_bit_training: false
+qlora: true
+qlora_config:
+  double_quant: true
+  quant_type: nf4
+load_in_4_bit: true
+load_in_8_bit: false
 template: alpaca-lora
