--- a/funtuner/config/config.yaml
+++ b/funtuner/config/config.yaml
@@ -24,12 +24,16 @@ deepspeed_config: "./funtuner/config/zero2.json"
 LoRa: true 
 LoraConfig:
   r: 8
-  target_modules: ["q_proj","k_proj","v_proj","o_proj"]
+  target_modules: all
   lora_alpha: 16
   bias: none
   lora_dropout: 0.05
   task_type: CAUSAL_LM
   inference_mode: false
-  modules_to_save: ["wte", "lm_head"]
-eight_bit_training: false
-template: orca-style
+qlora: true
+qlora_config:
+  double_quant: true
+  quant_type: nf4
+load_in_4_bit: true
+load_in_8_bit: false
+template: alpaca-lora
